--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "type": "module",
     "dependencies": {
-        "tone": "^14.7.77"
+        "tone": "^14.7.77",
+        "flowbite-svelte-icons": "^1.5.0"
     }
 }
