--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
-        "@playwright/test": "^1.28.1",
-        "@sveltejs/adapter-auto": "^3.0.0",
-        "@sveltejs/kit": "^2.0.0",
-        "@sveltejs/vite-plugin-svelte": "^3.0.0",
-        "@types/eslint": "^8.56.0",
-        "@typescript-eslint/eslint-plugin": "^7.0.0",
-        "@typescript-eslint/parser": "^7.0.0",
+        "@playwright/test": "^1.45.1",
+        "@sveltejs/adapter-auto": "^3.2.2",
+        "@sveltejs/kit": "^2.5.18",
+        "@sveltejs/vite-plugin-svelte": "^3.1.1",
+        "@types/eslint": "^8.56.10",
+        "@typescript-eslint/eslint-plugin": "^7.16.0",
+        "@typescript-eslint/parser": "^7.16.0",
         "autoprefixer": "^10.4.19",
-        "eslint": "^8.56.0",
+        "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-svelte": "^2.36.0-next.4",
-        "postcss": "^8.4.38",
-        "prettier": "^3.2.5",
-        "prettier-plugin-svelte": "^3.1.2",
-        "prettier-plugin-tailwindcss": "^0.5.13",
-        "svelte": "^5.0.0-next.1",
-        "svelte-check": "^3.6.0",
-        "tailwindcss": "^3.4.3",
-        "tslib": "^2.4.1",
-        "typescript": "^5.0.0",
-        "vite": "^5.0.3"
+        "eslint-plugin-svelte": "^2.42.0",
+        "flowbite-svelte-icons": "2.0.0-next.10",
+        "postcss": "^8.4.39",
+        "prettier": "^3.3.3",
+        "prettier-plugin-svelte": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.5.14",
+        "svelte": "5.0.0-next.183",
+        "svelte-check": "^3.8.4",
+        "tailwindcss": "^3.4.4",
+        "tslib": "^2.6.3",
+        "typescript": "^5.5.3",
+        "vite": "^5.3.3"
     },
     "type": "module",
     "dependencies": {
-        "tone": "^14.7.77",
-        "flowbite-svelte-icons": "^1.5.0"
+        "tone": "^14.9.17"
     }
 }
