--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --check . && eslint .",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "deploy": "pnpm build && pnpx gh-pages -d build"
     },
     "devDependencies": {
         "@playwright/test": "^1.45.1",
         "@sveltejs/adapter-auto": "^3.2.2",
+        "@sveltejs/adapter-static": "^3.0.2",
         "@sveltejs/kit": "^2.5.18",
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
         "@types/eslint": "^8.56.10",
@@ -25,6 +27,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.42.0",
         "flowbite-svelte-icons": "2.0.0-next.10",
+        "gh-pages": "^6.1.1",
         "postcss": "^8.4.39",
         "prettier": "^3.3.3",
         "prettier-plugin-svelte": "^3.2.5",
