--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --check . && eslint .",
         "format": "prettier --write .",
-        "deploy": "pnpm build && pnpx gh-pages -d build"
+        "deploy": "pnpx gh-pages -d build -t true"
     },
     "devDependencies": {
         "@playwright/test": "^1.45.1",
